World as a prereq